@@ -58,12 +58,12 @@ You're interested in contributing to SPREAD? *THAT'S AWESOME!* Here are the basi
 
 h1. TODO
 
+* Annotate the terminals in the tree with corresponding taxon names
 * Eliminate text fields, fill combo boxes with parsed trait names instead
 * Less dependencies:
  - add kmlframework to sources (if licenses compatible) 
 * Add command line interface for kml templates 
 * Fix large scaling factor issues
-* Improve custom slice heights
 
 
 
