@@ -9,7 +9,7 @@
 	<property environment="env"/>
 
 
-    <property name="version" value="1.0.5rc" />
+    <property name="version" value="1.0.5" />
     <property name="release_dir" value="." />
     <property name="name" value="SPREAD" />
 
