@@ -36,7 +36,7 @@ public class SpreadApp {
     /**
      * Version string: assumed to be in format x.x.x
      */
-    private static final String VERSION = "1.0.5rc";
+    private static final String VERSION = "1.0.5";
     private static final String DATE_STRING = "2012";
 
 	// Dimension
@@ -345,4 +345,4 @@ public class SpreadApp {
 
 	}// END: CreateImage
 
-}// END: TestlabOutbreakApp
+}// END: SpreadApp
