@@ -3,11 +3,6 @@ package checks;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.IOException;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
 
 import jebl.evolution.graphs.Node;
 import jebl.evolution.io.ImportException;
